src/stylesheet/ovenplayer.less
/* ... */
.op-player {
  position: absolute;
  top: 0;
  height: 100%;
  width : 100%;



  .op-core-ui-wrapper {
    position : relative;
    height: 100%;
  }

  .op-media-element-container {
   /* display: block;
    height: 100%;
    width: auto;
    position : relative;*/


    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;

    video {
      position: absolute;
      width: 100%;
      height : 100%;
    }
    object {
      width: 100%;
      height : 100%;
    }
  }

  .op-ui {
    /*position : absolute;
    bottom : 0px;
    left : 0px;
    width: 100%;
    height: 100%;*/
    .op-controls-container{}
    .op-helpers-container{}
  }
}
.op-ads{
  position: absolute;
  height: 100%;
  width: 100%;
  padding-bottom : 34px;
  //pointer-events: none;
  top:0;
  &>div{
    position: absolute !important;
    width: 100% !important;
    height: 100% !important;
    iframe{
      pointer-events :auto;
    }
  }

  video.op-ads-vast-video{
    background-color: rgb(0, 0, 0);
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    z-index: 1;
  }

  .op-ads-button{
    bottom: 36px;
    cursor: default;
    margin-right: 4px;
    pointer-events: auto;
    position: absolute;
    right: 0;
    z-index: 1;
    width: auto !important;
    height: auto !important;
    border-radius: 4px;
    background-color: rgba(18, 18, 28, 0.7);
    min-width: 155px;
    display: none;

    .op-ads-textview{
      color: #e6e6e6;
      //font-family: arial,sans-serif;
      font-weight: normal;
      font-size: 11px;
      padding: 6px 12px;
      text-align: center;
      display: inline-block;
      width: 100%;
      vertical-align: middle;
    }
    .videoAdUiAction {
      padding: 8px 24px;
      cursor: pointer;
      direction: ltr;
      font-weight: normal;
      font-size: 20px;
      border : 1px solid rgba(255,255,255,0.5);
      &:hover{
        border-radius: 4px;
        border : 1px solid rgba(255,255,255,1);
      }
      i{
        display: inline-block;
        width : auto;
      }
    }
  }

}

/**
 * @brief   common components
 * */

.op-button {
  display: inline-block;
  border: none;
  background: transparent;
  padding: 0;
  color: inherit;
  text-align: inherit;
  overflow: hidden;
  font-weight: 100;
  font-size : 30px;
  text-indent: 0 !important;

  &:focus, & {
    outline: 0;
  }
}

i.op-con{
  font-family: "op-icons", "op-seek-icons";
  font-style: normal;
  font-weight: normal;
  speak: none;

  font-size: inherit;
  width: 30px;
  line-height: 30px;

  display: block;
  text-decoration: inherit;
  text-align: center;

  /* For safety - reset parent styles, that can break glyph codes*/
  font-variant: normal;
  text-transform: none;

  /* Font smoothing. That was taken from TWBS */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  cursor: pointer;

  &.disable {
    color : #4f4f4f;
  }
  &.op-close-icon{&::before{content: "\e900";}}
  &.op-pause-big{&::before{content: "\e911";}}
  &.op-fullscreen-compress{&::before{content: "\e901";}}
  &.op-fullscreen-expand{&::before{content: "\e902";}}
  &.op-arrow-left{&::before{content: "\e903";}}
  &.op-arrow-right{&::before{content: "\e909";}}
  &.op-empty-video{&::before{content: "\e904";}}
  &.op-play{&::before{content: "\e906";}}
  &.op-replay{&::before{content: "\e908";}}
  &.op-seek-back{&::before{content: "\e920";}}
  &.op-seek-forward{&::before{content: "\e921";}}
  &.op-playlist-icon{&::before{content: "\e907";}}
  &.op-replay-big{&::before{content: "\e908";}}
  &.op-setting{&::before{content: "\e90A";}}
  &.op-pause{&::before{content: "\e90C";}}
  &.op-volume-small{display:none;margin-top:-1px;&::before{content: "\e90D";}}
  &.op-volume-mute{display:none;&::before{content: "\e90E";}}
  &.op-volume-max{&::before{content: "\e90F";}}
  &.op-play-big{&::before{content: "\e910";}}
  &.op-warning{&::before{content: "\e912";}}
}
.op-badge{
  display: inline-block;
  padding: .75em .714em .714em .680em;
  font-size: 1em;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.286em;
  background-color: #12121c;
}
/* ... */

